--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^3.3.1",
     "@supabase/auth-helpers-nextjs": "^0.8.1",
     "@supabase/supabase-js": "^2.36.0",
+    "classnames": "^2.3.2",
     "next": "13.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
