--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.2",
+    "react-quill": "^2.0.0",
+    "tailwind-scrollbar": "^3.0.5",
     "yup": "^1.3.1",
     "yup-password": "^0.2.2"
   },
