--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,10 +6,10 @@
   "extends": [
     "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended",
+    "prettier",
     "plugin:prettier/recommended",
     "plugin:jsx-a11y/recommended",
-    "next/core-web-vitals",
-    "prettier"
+    "next/core-web-vitals"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
