--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,4 @@
 {
   "prettier.configPath": ".prettierrc",
-  "prettier.prettierPath": "node_modules/prettier/index.cjs",
-  "files.eol": "\n"
+  "prettier.prettierPath": "node_modules/prettier",
 }
