--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "innox-management",
+  "name": "thermite",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,34 +9,38 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@supabase/ssr": "^0.0.10",
-    "@supabase/supabase-js": "^2.38.4",
+    "@hookform/resolvers": "^3.3.1",
+    "@supabase/supabase-js": "^2.36.0",
     "clsx": "^2.0.0",
-    "next": "14.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwind-scrollbar": "^3.0.5"
+    "next": "13.5.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.46.2",
+    "react-quill": "^2.0.0",
+    "tailwind-scrollbar": "^3.0.5",
+    "yup": "^1.3.1",
+    "yup-password": "^0.2.2"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8.53.0",
-    "eslint-config-next": "14.0.1",
+    "@types/node": "20.7.0",
+    "@types/react": "18.2.23",
+    "@types/react-dom": "18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
+    "@typescript-eslint/parser": "^6.7.3",
+    "autoprefixer": "^10.4.16",
+    "eslint": "8.50.0",
+    "eslint-config-next": "^13.5.3",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "postcss": "^8.4.31",
+    "postcss": "^8.4.30",
     "prettier": "^3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.7",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "prettier-plugin-tailwindcss": "^0.5.4",
+    "tailwindcss": "^3.3.3",
+    "typescript": "5.2.2"
   }
 }
