--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.2",
     "react-hot-toast": "^2.4.1",
+    "react-loading-skeleton": "^3.3.1",
     "react-quill": "^2.0.0",
     "tailwind-merge": "^2.0.0",
     "tailwind-scrollbar": "^3.0.5",
