--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
     "@supabase/supabase-js": "^2.36.0",
+    "chart.js": "^4.4.1",
     "clsx": "^2.0.0",
     "lodash.debounce": "^4.0.8",
     "next": "13.5.4",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.2",
     "react-hot-toast": "^2.4.1",
